# bengull-engine

./: CMakeLists.txt  README.md
src/: engine.cpp
src/jngl/jungle/: jungle.cpp  jungle.h
src/jngl/node/: node.cpp
